@@ -18,8 +18,8 @@ include MANIFEST.in setup.py
 
 # These are the modules included in the 'qm' package.
 recursive-include   qm *.py
-# This is the main executable.
-include             qm/test/qmtest
+# Scripts
+include             scripts/*
 # These are all docs, html and pdf.
 recursive-include   share/doc/qmtest *
 # These are documentation sources (docbook) and compilation harness (xslt etc.)
