@@ -9,7 +9,7 @@
 # Contents:
 #   QMTest command line application.
 #
-# Copyright (c) 2001, 2002, 2003 by CodeSourcery, LLC.  All rights reserved. 
+# Copyright (c) 2001 - 2006 by CodeSourcery.  All rights reserved. 
 #
 # For license terms see the file COPYING.
 #
@@ -66,63 +66,7 @@ import os
 import os.path
 import string
 import traceback
-
-# The Python interpreter will place the directory containing this
-# script in the default path to search for modules.  That is
-# unncessary for QMTest, and harmful, since then "import resource"
-# imports the resource module in QMTest, not the global module of
-# the same name.
-sys.path = sys.path[1:]
-
-rel_prefix = os.path.join(os.pardir, os.pardir)
-"""The relative path to the installation prefix.
-
-This string gives the relative path from the directory containing this
-script to the installation directory.  The value above is correct when
-QMTest is being run out of the source tree.  When QMTest is installed,
-this value is updated appropriately."""
-
-# Get the path to this script.
-qm_path = os.path.abspath(sys.argv[0])
-
-# Get the root of the QMTest installation.
-qm_home = os.environ.get("QM_HOME")
-if qm_home is None:
-    # Get the path to the installation directory.
-    qm_home = os.path.normpath(os.path.join(os.path.dirname(qm_path),
-                                            rel_prefix))
-
-# Update sys.path so that we can find the rest of QMTest.
-if sys.platform != "win32":
-    # Following logic stolen from distutils.command.build:
-    import distutils.util
-    plat_spec = "lib.%s-%s" % (distutils.util.get_platform(),
-                               sys.version[0:3])
-    rel_libdir = os.path.join("build", plat_spec)
-    """The relative path from the prefix to the library directory.
-
-    This path gives the relative path from the prefix to the library
-    directory.  The value above is correct when QMTest is being run out of
-    the source tree.  When QMTest is installed, this value is updated
-    appropriately."""
-
-    libdir = os.path.normpath(os.path.join(qm_home, rel_libdir))
-    if libdir not in sys.path:
-        sys.path.insert(0, libdir)
-else:
-    # On Windows, the value computed for rel_libdir is incorrect because
-    # Distutils does a mock pre-installation using different directory
-    # names than are used by the binary installer.  On Windows, however,
-    # the QM module files are installed into a location that is already in
-    # sys.path.
-    pass
-
 import qm
-
-# Set the prefix variable so that the rest of QMTest can find
-# documentation files, test classes, and so forth.
-qm.prefix = qm_home
-
 import qm.cmdline
 import qm.diagnostic
 import qm.platform
@@ -160,7 +104,7 @@ def main():
         qm.sigmask.save_mask()
 
     # Parse the command line.
-    command = qm.test.cmdline.QMTest(sys.argv[1:], qm_path)
+    command = qm.test.cmdline.QMTest(sys.argv[1:], sys.argv[0])
 
     # Execute the command.
     exit_code = command.Execute()
